--- a/style.css
+++ b/style.css
@@ -23,10 +23,21 @@ body {
   flex-direction: column;
 }
 
-p {
-  margin: 1rem;
+h1 {
+  color: #4b86dd;
 }
-
+p {
+  margin: 2rem;
+}
+.votacion > img {
+  width: 100px;
+}
+.votacion > img:hover {
+  width: 98px;
+}
+.votacion > img:hover {
+  border: turquoise;
+}
 input {
   background-color: #4b86dd;
   color: white;
@@ -34,5 +45,14 @@ input {
   border: none;
   border-radius: 5px;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin: 2rem;
+  margin: 1rem;
+  text-transform: uppercase;
+}
+input:hover {
+  background-color: #5e99f1;
+}
+#errorVotacion {
+  display: none;
+  color: red;
+  margin: 5px;
 }
