--- a/style.css
+++ b/style.css
@@ -1,23 +1,35 @@
 body {
-  background-image: url(/Images/monsters-icons.jpeg);
-  background-size: 100%;
+  background: url(/Images/blob2.svg) center center no-repeat;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
   font-family: "Roboto", sans-serif;
   flex-direction: column;
 }
-.texto {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+.img1 {
+  width: 300px;
+  right: 50px;
+  top: 50px;
+  position: absolute;
+}
+.img3 {
+  width: 300px;
+  left: 100px;
+  bottom: 100px;
+  position: relative;
+}
+
+#temperature {
+  color: black;
+  font-size: 25px;
+  font-weight: bold;
+  border-left: thick solid black;
+  padding: 1rem;
 }
 
 .card {
-  background-color: white;
-  width: 700px;
-  height: 400px;
+  margin-top: 7rem;
+  position: relative;
   text-align: center;
-  border-radius: 15px;
-  box-shadow: 5px 22px 34px -1px rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,56 +37,58 @@ body {
 }
 
 h1 {
-  color: #4b86dd;
+  color: white;
 }
 h2 {
-  color: #4b86dd;
+  color: black;
   margin: 1rem;
 }
 #CurrentWeather {
   margin: 1rem;
 }
+
 #Joke {
+  color: white;
   margin: 2rem;
 }
 .votacion > img {
   width: 100px;
+  margin: 15px;
 }
 .votacion > img:hover {
   width: 98px;
 }
-.votacion > img:hover {
-  border: turquoise;
-}
+
 input {
-  background-color: #4b86dd;
-  color: white;
-  padding: 10px 25px;
-  border: none;
-  border-radius: 5px;
+  background-color: #edc951;
+  color: black;
+  padding: 15px 30px;
+  border: solid;
+  border-color: black;
+  border-width: 3px;
+  border-radius: 12px;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin: 1rem;
+  margin: 2rem;
   text-transform: uppercase;
 }
 input:hover {
-  background-color: #5e99f1;
+  background-color: black;
+  color: #edc951;
+  border-color: #edc951;
 }
 #errorVotacion {
   display: none;
   color: red;
   margin: 5px;
 }
-.weather {
-  background-color: white;
-  width: 300px;
-  height: 150px;
-  text-align: center;
-  border-radius: 15px;
-  box-shadow: 5px 22px 34px -1px rgba(0, 0, 0, 0.25);
+
+header {
   display: flex;
+  flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 5rem;
+}
+.weather {
+  display: flex;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
